--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -10,30 +10,30 @@ on:
       - released
 
 jobs:
-  appimage:
-    runs-on: ubuntu-16.04
-    # Waiting https://github.com/linuxdeploy/linuxdeploy/issues/154 fixed
-    # container: "ubuntu:16.04"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build AppImage
-        run:  sudo .github/workflows/build_appimage.sh
-      - uses: actions/upload-artifact@v2
-        with:
-          name: qBittorrent-Enhanced-Edition.AppImage
-          path: |
-            .github/workflows/qBittorrent-Enhanced-Edition.AppImage
-            .github/workflows/qBittorrent-Enhanced-Edition.AppImage.zsync
-      - name: Upload Github Assets
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ".github/workflows/qBittorrent-Enhanced-Edition.AppImage*"
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+  # appimage:
+  #   runs-on: ubuntu-16.04
+  #   # Waiting https://github.com/linuxdeploy/linuxdeploy/issues/154 fixed
+  #   # container: "ubuntu:16.04"
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Build AppImage
+  #       run:  sudo .github/workflows/build_appimage.sh
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: qBittorrent-Enhanced-Edition.AppImage
+  #         path: |
+  #           .github/workflows/qBittorrent-Enhanced-Edition.AppImage
+  #           .github/workflows/qBittorrent-Enhanced-Edition.AppImage.zsync
+  #     - name: Upload Github Assets
+  #       if: startsWith(github.ref, 'refs/tags/')
+  #       uses: svenstaro/upload-release-action@v2
+  #       with:
+  #         repo_token: ${{ secrets.GITHUB_TOKEN }}
+  #         file: ".github/workflows/qBittorrent-Enhanced-Edition.AppImage*"
+  #         tag: ${{ github.ref }}
+  #         overwrite: true
+  #         file_glob: true
 
   # cross compile for some other platforms, like arm, mips, etc.
   cross-compile:
@@ -48,21 +48,22 @@ jobs:
           # openssl_compiler choose from openssl source directory `./Configure LIST`
           # qt_device choose from https://github.com/qt/qtbase/tree/dev/mkspecs/devices/
           # qt_xplatform choose from https://github.com/qt/qtbase/tree/dev/mkspecs/
-          - cross_host: arm-linux-musleabi
-            openssl_compiler: linux-armv4
-            qt_device: linux-arm-generic-g++
-          - cross_host: aarch64-linux-musl
-            openssl_compiler: linux-aarch64
-            qt_device: linux-arm-generic-g++
-          - cross_host: mips-linux-musl
-            openssl_compiler: linux-mips32
-            qt_device: linux-generic-g++
-          - cross_host: mipsel-linux-musl
-            openssl_compiler: linux-mips32
-            qt_device: linux-generic-g++
-          - cross_host: mips64-linux-musl
-            openssl_compiler: linux64-mips64
-            qt_device: linux-generic-g++
+          
+          # - cross_host: arm-linux-musleabi
+          #   openssl_compiler: linux-armv4
+          #   qt_device: linux-arm-generic-g++
+          # - cross_host: aarch64-linux-musl
+          #   openssl_compiler: linux-aarch64
+          #   qt_device: linux-arm-generic-g++
+          # - cross_host: mips-linux-musl
+          #   openssl_compiler: linux-mips32
+          #   qt_device: linux-generic-g++
+          # - cross_host: mipsel-linux-musl
+          #   openssl_compiler: linux-mips32
+          #   qt_device: linux-generic-g++
+          # - cross_host: mips64-linux-musl
+          #   openssl_compiler: linux64-mips64
+          #   qt_device: linux-generic-g++
           - cross_host: x86_64-linux-musl
             openssl_compiler: linux-x86_64
             qt_device: linux-generic-g++
@@ -84,6 +85,19 @@ jobs:
           name: qbittorrent-nox_${{ matrix.cross_host }}_static
           path: |
             /tmp/qbittorrent-nox*
+      - name: upload artifact as zip
+        if: "!(startsWith(github.ref, 'refs/tags/'))"
+        uses: actions/upload-artifact@v2
+        with:
+          name: qBittorrent-nightly_${{ matrix.os }}
+          path: |
+            build/compile_commands.json
+            build/target_graph.dot
+            build/qbittorrent
+            build/qbittorrent-nox
+            libtorrent/cmake-build-dir/compile_commands.json
+            libtorrent/cmake-build-dir/target_graph.dot
+
       - name: Upload Github Assets
         if: startsWith(github.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
